results/6931a85d9b44d5e31a5f4ac66d9e2e31/err_code.txt
Traceback (most recent call last):
  File "./pyfile.py", line 15, in <module>
    from theonlinemcmc import MCMCWrapper
  File "/usr/local/lib/python2.7/dist-packages/theonlinemcmc/MCMCWrapper.py", line 149
    self.errval = DATA_LENGTH_ERR
       ^
IndentationError: expected an indented block
